<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱搭车</string>
    <string name="hello_world">Hello world!</string>
    <string name="passengers">乘客</string>
    <string name="drivers">车主</string>
    <string name="info">消息</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="info_detail">广播/活动/通知</string>
    <string name="broadcast">广播</string>
    <string name="activity">活动</string>
    <string name="notice">通知</string>
    <string name="home_detail">乘客和司机</string>
    <string name="my_detail">我的注册流程和设置</string>
    <string name="driver">车主</string>
    <string name="passenger">乘客</string>
    <string name="not_register">未登录</string>
    <string name="pinche_guide">拼车指南</string>
    <string name="setting">设置</string>
    <string name="addr_settings">地址设置</string>
    <string name="phone_change">更换手机号</string>
    <string name="password_settings">密码设置</string>
    <string name="aboutus">关于我们</string>
    <string name="quit">退出</string>
    <string name="phone_number">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="verify_login">验证并登陆</string>
    <string name="request_verify_code">获取验证码</string>
    <string name="hint">提示信息</string>
    <string name="input">请输入</string>
    <string name="password_login">密码登录</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="newpassword2">再次输入</string>
    <string name="input_phonenumber">输入电话号码</string>
    <string name="input_oldpassword">请输入旧密码</string>
    <string name="input_password">6~16位数字,大小写字母</string>
    <string name="input_password2">再次输入新密码</string>
    <string name="done">完成</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save">保存</string>
    <string name="tab_passenger">乘客</string>
    <string name="tab_driver">司机</string>
    <string name="password1">密\t\t\t码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="phonelogin">手机号快捷登录</string>
    <string name="easylogin">快捷登录</string>
    <string name="register_agreement">注册协议</string>
    <string name="carpool_agreement">拼车合乘协议</string>
    <string name="carpool_convention">拼车公约</string>
    <string name="raw_strategy">新手攻略</string>
    <string name="intercitycarpoolguide">城际拼车指南</string>
    <string name="insurance_regulations">保险规则说明</string>
    <string name="passenger_go">上班约车</string>
    <string name="driver_go">上班接单</string>
    <string name="passenger_off">下班约车</string>
    <string name="passenger_otherorder">其他约车</string>
    <string name="driver_off">下班接单</string>
    <string name="driver_otherorder">其他接单</string>
    <string name="query_driver_info">车主路线</string>
    <string name="query_my_dindan">我的订单</string>
    <string name="choose_date">选择日期和时间</string>
    <string name="set_time">设置时间</string>
    <string name="infobroadcasttext1">搭车版\"friend ship\"</string>
    <string name="infobroadcastsubtext1">友谊的小船说翻就翻，搭车的【红包】说给就给！</string>
    <string name="infobroadcasttext2">积分兑换单身汪，早日脱单！</string>
    <string name="infobroadcastsubtext2">脱单的日子说到就到！你还在等什么，爱搭车高颜值的用户们都在这里了！</string>
    <string name="infobroadcasttext3">内含福利，先到先得！</string>
    <string name="infobroadcastsubtext3">拼车被免单并不是靠美颜！关于免单的种种秘密，今天已经付出水面了，爱搭车一一道出！</string>
    <string name="infobroadcasttext4">积分即可兑换</string>
    <string name="infobroadcastsubtext4">积分兑换商城新品上线，蓝牙耳机免费兑换，更有进口红酒，租车首日免单券等你拿！</string>
    <string name="infobroadcasttext5">你搭车，我免单</string>
    <string name="infobroadcastsubtext5">什么样的乘客最具备“被免单体质”呢？爱搭车用数据告诉你！</string>
    <string name="infobroadcasttext6">出行那些事儿</string>
    <string name="infobroadcastsubtext6">QuestMobile中国出行APP数据报告：爱搭车获双料冠军！点击查看！</string>
    <string name="infobroadcasttext7">出行心情表达</string>
    <string name="infobroadcastsubtext7">走在路上狂风暴雨终摧折,是不是很酸爽？爱搭车给你清凉的一夏！</string>
    <string name="infobroadcasttext8">广州三星,你约不约？</string>
    <string name="infobroadcastsubtext8">来科学城广州三星大厦,免费赢取神秘大礼,100%中奖，还不快点来参加！</string>
    <string name="infobroadcasttext9">爱搭车大数据</string>
    <string name="infobroadcastsubtext9">爱搭车携手阿里云大数据,分析搭车人员信息与路况，让出行更加便利！</string>
    <string name="infonoticetext1">快来认证车主</string>
    <string name="infonoticesubtext1">快来认证爱搭车车主，超快速体验，30s即可提交！顺路接单赚邮费的同时还可以额外现金奖励拿哦！</string>
    <string name="infonoticetext2">领免费行程</string>
    <string name="infonoticesubtext2">你有一次免费行程可领，最高减免8公里！点击领取！</string>
    <string name="infonoticetext3">积分到账啦</string>
    <string name="infonoticesubtext3">个人资料完善啦！奖励10积分！积分商城多重好礼等你兑换，先到先得，这就去看看！</string>
    <string name="infoactivitytextview1">好礼拼车就送价值159元养车套餐、399元智驾盒子，还有59元糖果随手杯！</string>
    <string name="infoactivitytextview2">“感觉识别”爱搭车智能手环即将推出，秒杀出行和社交两界大杀器“爱搭车拼感觉”马上就能体验！</string>
    <string name="infoactivitytextview3">小爱带你脱单，当上人生赢家不是梦，机会来啦，单身汪这里报名脱单！</string>
    <string name="infoactivitytextview4">坐上马桶也能拯救世界？走路刷步数就能改变未来？地球一小时，从为地球熄灯开始！</string>
    <string name="navigate_up">返回</string>
    <string name="charge_rule">计费规则</string>
    <string name="passenger_go_time">何时出发？</string>
    <string name="passenger_go_number">同行几人？</string>
    <string name="driver_go_number">剩余空座：</string>
    <string name="passenger_reservation">确定预约</string>
    <string name="driver_reservation">确定发布</string>
    <string name="contactwithhim">跟Ta联系</string>
    <string name="ontheway">顺路地点：</string>
    <string name="passenger_home_add">出发地址：</string>
    <string name="passenger_work_add">到达地址：</string>
    <string name="driver_go_time">出发时间：</string>
    <string name="show_charge">¥26.00</string>
    <string name="passenger_go_work">上班约车</string>
    <string name="passenger_go_home">下班约车</string>
    <string name="passenger_view_driver">车主路线</string>
    <string name="dindan_list">订单列表</string>
    <string name="my_path">我的路线</string>
    <string name="go_work">上班</string>
    <string name="off_work">下班</string>
    <string name="near_place">附近</string>
    <string name="View_charge_rule">计费规则</string>
    <string name="check_update">检查更新</string>
    <string name="privacy_note">隐私说明</string>
    <string name="function_introduction">功能介绍</string>
    <string name="home_addr">家庭地址</string>
    <string name="office_addr">工作地址</string>
    <string name="next_step">下一步</string>
    <string name="head">头像</string>
    <string name="age">年龄层</string>
    <string name="job">职业</string>
    <string name="signature">个性签名</string>
    <string name="hometown">家乡</string>
    <string name="srcg_reserved">广州三星\t版权所有\nCopyright\t2013-2016\tSamsung.\nAll\tRight\tReserved.</string>
    <string name="app_version">爱搭车\t2.0.01</string>
    <string name="quit_hint">提示</string>
    <string name="cancel">取消</string>
    <string name="quit_detail">确定要退出么？</string>
    <string name="confirm">确定</string>
    <string name="map_detail">地图显示各个地点列表</string>
    <string name="inputaddr">请输入地址</string>
    <string name="setnamesexquithint">是否继续完善个人信息，提高搭车成功率？</string>
    <string name="suggest_upload_head">上传本人真实头像，能提高接单率哦</string>
    <string name="gallery">相册</string>
    <string name="camera">照相机</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择城市</string>
    <string name="job_it">IT互联网</string>
    <string name="job_communication">电子通信</string>
    <string name="job_build">房产建筑</string>
    <string name="job_finance">金融</string>
    <string name="job_goods">消费品</string>
    <string name="job_machine">机械工业</string>
    <string name="job_law">司法法律</string>
    <string name="job_outsource">外包服务</string>
    <string name="job_media">文化传媒</string>
    <string name="job_trade">轻工贸易</string>
    <string name="job_biology">医疗生物</string>
    <string name="job_chemical">化工环保</string>
    <string name="job_energy">新能源</string>
    <string name="job_government">政府科研</string>
    <string name="job_teacher">京翰教育东塘校区校长</string>
    <string name="job_student">学生</string>
    <string name="job_others">其他</string>
    <string name="click_select_province">点击选择省份</string>
    <string name="nicknamehint">请输入不超过20个字符的昵称</string>
    <string name="signaturehint">请输入不超过50个字符的个性签名</string>
    <string name="slide_update">下拉刷新</string>
    <string name="lasttime_update">上次更新</string>
    <string name="data_edit">信息完善</string>
    <string name="base_data">基本资料</string>
    <string name="passenger_route_title">我的拼车列表</string>
    <string name="dirver_route_title">司机出行列表</string>
    <string name="welcome_to_register_driver">任何时候，去成就更多人，都是一件伟大至极的事儿!</string>
    <string name="china_good_driver">车主：匡豪 著名软件开发工程师 雷克萨斯RX</string>
    <string name="register_to_driver">立即成为车主</string>
    <string name="register_driver">注册车主</string>
    <string name="driver_num_pos">剩余车位：</string>
    <string name="driver_pass_way">途径地址：</string>
    <string name="driver_phone_number">联系方式：</string>
    <string name="driver_route_title_driverview">我的出行列表</string>
    <string name="passenger_route_title_driverview">乘客拼车列表</string>
    <string name="exceed_rout_num">你已经超出最大订单数，请先出行完毕再下订单！</string>
    <string name="confirm_delete_route">确定需要删除这条出行计划吗？</string>
    
</resources>
