<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/setnickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setnicknametextview"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/setnickname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:hint="@string/input">
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/register_fengefu"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:id="@+id/setnickname2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setnicknametextview1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textSize="17sp"/>

        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/savenicknamesex"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="60dp"
        android:background="@drawable/roundedbtnshape"
        android:text="@string/save"
        android:textColor="@color/white"/>

</LinearLayout>