<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pinche"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="11"
            android:hint="@string/input"
            android:inputType="phone"
            android:maxLength="11">
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/register_fengefu"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:id="@+id/pinche1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/password1"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/cord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="4"
            android:hint="@string/input_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/savecord"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:background="@drawable/roundedbtnshape"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/phonelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/phonelogin"
        android:textColor="@color/orange"
        android:textSize="14sp"/>

<!--     <LinearLayout
        android:id="@+id/pinche3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kindly_reminder"
            android:textSize="12sp"/>
    </LinearLayout> -->

</LinearLayout>