<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registersettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/isharecarslogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/newicon"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"/>

    <TextView 
        android:id="@+id/isharecarsname"
        android:textSize="16sp"
        android:textColor="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/app_version"/>

    <LinearLayout
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aboutustextview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/check_update"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/aboutusfengefu1"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <LinearLayout
        android:id="@+id/aboutus1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aboutustextview1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/privacy_note"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/aboutusfengefu2"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:id="@+id/aboutus2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aboutustextview2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/function_introduction"
            android:textSize="16sp"/>
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/pinche3"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srcg_reserved"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>