<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/datetime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:minHeight="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="32dp"
        android:text="@string/choose_date"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:gravity="fill_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/divider_strong_holo"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_time"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/orange"
            android:text="@string/confirm"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/dataeditgray"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>