<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/wechatactionbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/actionbaricon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hello_world"
            android:background="@drawable/actionbardeep"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/actionbarhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/easylogin"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:id="@+id/phoneregister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pinche"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/phone_number"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/PhoneEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="11"
                    android:hint="@string/input"
                    android:inputType="phone"
                    android:maxLength="11">
                    <requestFocus/>
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/register_fengefu"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:id="@+id/pinche1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/verify_code"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/Code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="4"
                    android:hint="@string/input"
                    android:inputType="phone"
                    android:maxLength="4"/>

                <Button
                    android:id="@+id/getCode"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/request_verify_code"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    android:visibility="visible"/>
            </LinearLayout>

            <Button
                android:id="@+id/Indentity"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:background="@drawable/roundedbtnshape"
                android:onClick="click"
                android:text="@string/verify_login"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/password_login"
                android:textColor="@color/orange"
                android:textSize="16sp"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>