<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="2dp" >

    <LinearLayout
        android:id="@+id/viewroutergotime"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivgotime"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/driver_go_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/driverGoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewrouterstartaddr"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivstartaddr"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/addr3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/passenger_home_add"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/homeaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="13sp" />
        
        <TextView 
            android:id="@+id/cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/orange"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewrouterendaddr"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivendaddr"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/addr2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/passenger_work_add"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/workaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>