<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/passenger_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/wechatactionbar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/actionbaricon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hello_world"
            android:background="@drawable/actionbardeep"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/actionbarhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/query_my_dindan"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1"/>
        
        <TextView
            android:id="@+id/chargerule"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/charge_rule"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/driver_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

</LinearLayout>